<resources>
    <string name="app_name">LED GAMES</string>
    <string name="high_score">High Score</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
    <string name="header">Title</string>
    <string name="write_an_ip">Login</string>
    <string name="write_hint">IP-address</string>
    <string name="send">SEND</string>
    <string name="textview_game"> </string>
    <string name="write_your_name">User name</string>
    <string name="textviewname">TextView</string>
    <string name="textviewID">TextView</string>
    <string name="textviewid">TextView</string>
    <string name="ip_name_userid">ip.name.userID</string>
    <string name="points">points</string>
    <string name="puzzle">Puzzle</string>
    <string name="traffic">Traffic</string>
    <string name="choose_game">Choose Game</string>
    <string name="puzzle_game">Puzzle Game</string>
    <string name="traffic_game">Traffic Game</string>
    <string name="duel">Duel</string>
    <string name="duel_game">Duel Game</string>
    <string name="give_up">GIVE UP</string>
    <string name="title_activity_high_score">HighScore</string>
    <string name="deathmatch">Deathmatch</string>
    <string name="background">background</string>
    <string name="background1">background1</string>
    <string name="backgground2">backgground2</string>
    <string name="background3">background3</string>
    <string name="_9">9</string>
    <string name="_45">45</string>
    <string name="score_limit">Score limit:</string>
</resources>
